fixing overflow issue on process page

--- a/assets/css/_pages/process.scss
+++ b/assets/css/_pages/process.scss
@@ -101,6 +101,7 @@
         > .container {
           padding: 0;
           width: 650px;
+          max-width: 100%;
           margin: 0 auto;
         }
       }
